packages/platformos-mcp-supervisor/test/fixtures/broken-project/app/views/partials/errors/nested_graphql.liquid
{% doc %}
  @param id {string} Product ID
{% enddoc %}
{% graphql product = 'products/search' %}
{% for p in product.records.results %}
  {% graphql details = 'products/create', title: p.properties.title %}
{% endfor %}
